<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="szyszka.it.friendlocalizer.activities.HelloActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titleBar"
        app:titleTextColor="@color/backgroundWhite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passInput"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <Button
                android:id="@+id/signUp"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/red"/>

            <Button
                android:id="@+id/signIn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/sing_in"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_green"/>

        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/remember_me" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/titleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/fontColor"
        android:textSize="@dimen/large_font_size"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginForm"/>

</RelativeLayout>