<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:titleTextColor="@color/backgroundWhite"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/searchFriendsButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/searchFriendsText"
            android:backgroundTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/searchFriendsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/searchFriends"
            android:ems="10"
            android:textColor="@color/backgroundWhite"
            android:inputType="textPersonName"
            android:hint="@string/search_for_friends" />


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/personalDataLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="55dp">

        <ImageView
            android:id="@+id/friendIcon"
            android:layout_width="@dimen/user_icon_size"
            android:layout_height="@dimen/user_icon_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/changePassword"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:textAllCaps="true"
            android:text="@string/ul_user_name"
            android:textSize="@dimen/large_font_size" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/friendIcon"
            android:layout_alignEnd="@+id/userName"
            android:layout_alignParentStart="true"
            android:text="@string/change_password" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personalDataLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:tabTextColor="@color/backgroundWhite"
                app:tabIndicatorColor="@color/pink"
                app:tabMode="fixed"
                app:tabGravity="fill" />

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/userPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".activities.UserActivity"/>

    </LinearLayout>

</RelativeLayout>